[gd_scene load_steps=4 format=3 uid="uid://bhod4qsibauu5"]

[ext_resource type="Script" path="res://Scripts/Title_Scene.gd" id="1_nue8w"]
[ext_resource type="Texture2D" uid="uid://ckp0u0kx1sx2p" path="res://Textures/TitleBackground.png" id="2_6hxrx"]
[ext_resource type="Texture2D" uid="uid://eeo7ay1bokbs" path="res://Textures/Title.png" id="3_d08xi"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_nue8w")

[node name="TitleBackground" type="Sprite2D" parent="."]
position = Vector2(560, 283)
scale = Vector2(24.12, 14.04)
texture = ExtResource("2_6hxrx")

[node name="Title" type="Sprite2D" parent="."]
position = Vector2(578, 230)
scale = Vector2(11.8779, 9.67155)
texture = ExtResource("3_d08xi")

[node name="StartButton" type="Button" parent="."]
offset_left = 469.0
offset_top = 323.0
offset_right = 515.0
offset_bottom = 354.0
scale = Vector2(3.9342, 3.15214)
text = "Start"

[node name="InstructionsButton" type="Button" parent="."]
offset_left = 385.0
offset_top = 421.0
offset_right = 486.0
offset_bottom = 452.0
scale = Vector2(3.9342, 3.15214)
text = "Instructions"

[node name="CreditsButton" type="Button" parent="."]
offset_left = 442.0
offset_top = 519.0
offset_right = 505.0
offset_bottom = 550.0
scale = Vector2(3.9342, 3.15214)
text = "Credits"

[connection signal="button_down" from="StartButton" to="." method="_on_start_button_button_down"]
[connection signal="button_down" from="InstructionsButton" to="." method="_on_instructions_button_button_down"]
[connection signal="button_down" from="CreditsButton" to="." method="_on_credits_button_button_down"]
